--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 body
 {
-    background-color: aliceblue;
+    background-color: #EFF5F5;
+    list-style-position: inside
 }
 .content
 {
-    padding-left: 20cm;
+    padding-left: 20cm; color: #3d6164;margin-bottom: 10px
 }
 
 .content3
 {
-    padding-left: 20cm;
+    padding-left: 20cm; color: #3d6416;
+}
+body, h1, h2, h3, h4, h5, h6 {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+#ömer
+{
+    border-left-width:larger;
+    border-style: solid;
+}
+h2
+{
+    color:#EB6440;
 }
