--- a/style.css
+++ b/style.css
@@ -24,3 +24,33 @@ h2
 {
     color:#EB6440;
 }
+.container
+{
+    width: 450px;
+    height: 500px ;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:#D6E4E5;
+    padding: 30px;
+    float: right;
+    color: #3d6416;
+    font: weight 40px;
+   
+}
+.şiirlist
+{
+    width: 400px;
+    height: 500px;
+    background-color: #D6E4E5;
+    float: left;
+    margin: 10px;
+    padding: 20px;
+    
+} 
+#foto
+{
+ margin: 10px;
+ padding: 15px;
+ background-color:#D6E4E5 ;
+ float: right 1px;
+ padding-right: 2cm;
+}
